--- a/Module_09_Functions_List_Comprehensions/Module_09_excercise_level_1,2&3.ipynb
+++ b/Module_09_Functions_List_Comprehensions/Module_09_excercise_level_1,2&3.ipynb
@@ -870,6 +870,70 @@
     "   - ## Create a function called the most_spoken_languages in the world. It should return 10 or 20 most spoken languages in the world in descending order\n",
     "   - ## Create a function called the most_populated_countries. It should return 10 or 20 most populated countries in descending order."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from countries_data import countries_data "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 10 most spoken languages:\n",
+      "English: 91 countries\n",
+      "French: 45 countries\n",
+      "Arabic: 25 countries\n",
+      "Spanish: 24 countries\n",
+      "Portuguese: 9 countries\n",
+      "Russian: 9 countries\n",
+      "Dutch: 8 countries\n",
+      "German: 7 countries\n",
+      "Chinese: 5 countries\n",
+      "Serbian: 4 countries\n"
+     ]
+    }
+   ],
+   "source": [
+    "def most_spoken_languages(countries_data):\n",
+    "    \"\"\"\n",
+    "    Returns the top 10 most spoken languages in descending order of their frequency of use.\n",
+    "\n",
+    "    Args:\n",
+    "        countries_data (list): A list of dictionaries where each dictionary contains country data,\n",
+    "                               including a \"languages\" key with a list of languages spoken.\n",
+    "\n",
+    "    Returns:\n",
+    "        list: A list of tuples representing the top 10 most spoken languages and their frequencies.\n",
+    "    \"\"\"\n",
+    "    language_count = {}\n",
+    "\n",
+    "    # Count the frequency of each language\n",
+    "    for country in countries_data:\n",
+    "        for language in country[\"languages\"]:\n",
+    "            language_count[language] = language_count.get(language, 0) + 1\n",
+    "\n",
+    "    # Sort languages by frequency in descending order and take the top 10\n",
+    "    sorted_languages = sorted(language_count.items(), key=lambda x: x[1], reverse=True)\n",
+    "    \n",
+    "    return sorted_languages[:10]\n",
+    "\n",
+    "# Example usage:\n",
+    "# Assuming countries_data is already defined or imported\n",
+    "top_10_languages = most_spoken_languages(countries_data)\n",
+    "print(\"Top 10 most spoken languages:\")\n",
+    "for language, count in top_10_languages:\n",
+    "    print(f\"{language}: {count} countries\")\n"
+   ]
   }
  ],
  "metadata": {
