--- a/Module_09_Functions_List_Comprehensions/Module_09_excercise_level_1,2&3.ipynb
+++ b/Module_09_Functions_List_Comprehensions/Module_09_excercise_level_1,2&3.ipynb
@@ -974,6 +974,220 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 💻 List Comprehensions Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Filter only negative and zero in the list using list comprehension\n",
+    "\n",
+    "``` python\n",
+    "numbers = [-4, -3, -2, -1, 0, 2, 4, 6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-4, -3, -2, -1, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [-4, -3, -2, -1, 0, 2, 4, 6]\n",
+    "\n",
+    "negative_and_zero = [num for num in numbers if num <= 0]\n",
+    "print(negative_and_zero)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Flatten the following list of lists of lists to a one dimensional list :\n",
+    "``` python\n",
+    "list_of_lists =[[[1, 2, 3]], [[4, 5, 6]], [[7, 8, 9]]]\n",
+    "\n",
+    "output\n",
+    "[1, 2, 3, 4, 5, 6, 7, 8, 9]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_of_lists =[[[1, 2, 3]], [[4, 5, 6]], [[7, 8, 9]]]\n",
+    "\n",
+    "\n",
+    "flattened_list = [number for row in list_of_lists for inner_list in row for number in inner_list]\n",
+    "print(flattened_list)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Using list comprehension create the following list of tuples:\n",
+    "``` python\n",
+    "[(0, 1, 0, 0, 0, 0, 0),\n",
+    "(1, 1, 1, 1, 1, 1, 1),\n",
+    "(2, 1, 2, 4, 8, 16, 32),\n",
+    "(3, 1, 3, 9, 27, 81, 243),\n",
+    "(4, 1, 4, 16, 64, 256, 1024),\n",
+    "(5, 1, 5, 25, 125, 625, 3125),\n",
+    "(6, 1, 6, 36, 216, 1296, 7776),\n",
+    "(7, 1, 7, 49, 343, 2401, 16807),\n",
+    "(8, 1, 8, 64, 512, 4096, 32768),\n",
+    "(9, 1, 9, 81, 729, 6561, 59049),\n",
+    "(10, 1, 10, 100, 1000, 10000, 100000)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0, 1, 0, 0, 0, 0, 0), (1, 1, 1, 1, 1, 1, 1), (2, 1, 2, 4, 8, 16, 32), (3, 1, 3, 9, 27, 81, 243), (4, 1, 4, 16, 64, 256, 1024), (5, 1, 5, 25, 125, 625, 3125), (6, 1, 6, 36, 216, 1296, 7776), (7, 1, 7, 49, 343, 2401, 16807), (8, 1, 8, 64, 512, 4096, 32768), (9, 1, 9, 81, 729, 6561, 59049), (10, 1, 10, 100, 1000, 10000, 100000)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = [(x, 1, x, x**2, x**3, x**4, x**5) for x in range(11)]\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Flatten the following list to a new list:\n",
+    "```python\n",
+    "countries = [[('Finland', 'Helsinki')], [('Sweden', 'Stockholm')], [('Norway', 'Oslo')]]\n",
+    "\n",
+    "output:\n",
+    "[['FINLAND','FIN', 'HELSINKI'], ['SWEDEN', 'SWE', 'STOCKHOLM'], ['NORWAY', 'NOR', 'OSLO']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['FINLAND', 'FIN', 'Helsinki'], ['SWEDEN', 'SWE', 'Stockholm'], ['NORWAY', 'NOR', 'Oslo']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "countries = [[('Finland', 'Helsinki')], [('Sweden', 'Stockholm')], [('Norway', 'Oslo')]]\n",
+    "\n",
+    "flattened_countries = [\n",
+    "    [country.upper(), country[:3].upper(), capital] \n",
+    "    for sublist in countries \n",
+    "    for country, capital in sublist \n",
+    "]\n",
+    "\n",
+    "print(flattened_countries)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Change the following list to a list of dictionaries:\n",
+    "``` python\n",
+    "countries = [[('Finland', 'Helsinki')], [('Sweden', 'Stockholm')], [('Norway', 'Oslo')]]\n",
+    "\n",
+    "output:\n",
+    "[{'country': 'FINLAND', 'city': 'HELSINKI'},\n",
+    "{'country': 'SWEDEN', 'city': 'STOCKHOLM'},\n",
+    "{'country': 'NORWAY', 'city': 'OSLO'}]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'Country': 'FINLAND', 'City': 'HELSINKI'}, {'Country': 'SWEDEN', 'City': 'STOCKHOLM'}, {'Country': 'NORWAY', 'City': 'OSLO'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "countries = [[('Finland', 'Helsinki')], [('Sweden', 'Stockholm')], [('Norway', 'Oslo')]]\n",
+    "\n",
+    "countries_to_a_list_of_dictionaries = [\n",
+    "    {\"Country\": country.upper(), \"City\": city.upper()}\n",
+    "    for sublist in countries \n",
+    "    for country, city in sublist \n",
+    "]\n",
+    "\n",
+    "print(countries_to_a_list_of_dictionaries)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Change the following list of lists to a list of concatenated strings:\n",
+    "```python\n",
+    "names = [[('Asabeneh', 'Yetayeh')], [('David', 'Smith')], [('Donald', 'Trump')], [('Bill', 'Gates')]]\n",
+    "output\n",
+    "['Asabeneh Yetaeyeh', 'David Smith', 'Donald Trump', 'Bill Gates']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Asabeneh Yetayeh', 'David Smith', 'Donald Trump', 'Bill Gates']\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = [[('Asabeneh', 'Yetayeh')], [('David', 'Smith')], [('Donald', 'Trump')], [('Bill', 'Gates')]]\n",
+    "concatenated_names = [' '.join(name[0]) for name in names]\n",
+    "\n",
+    "print(concatenated_names)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
