--- a/Module_13_Python_date_time_file_handling/Module_13_excercise.ipynb
+++ b/Module_13_Python_date_time_file_handling/Module_13_excercise.ipynb
@@ -11,11 +11,101 @@
     "#  Module 13 Assigment: Level 1\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 💻 Python Datetime Exercises\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Get the current day, month, year, hour, minute and timestamp from datetime module."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-01-22 11:42:51.025500\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "now = datetime.now()\n",
+    "print(now)                      # 2021-07-08 07:34:46.549883\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Format the current date using this format: \"%m/%d/%Y, %H:%M:%S\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Date & time: 01/22/2025, 11:46:05\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "# current date and time\n",
+    "now = datetime.now()\n",
+    "time = now.strftime(\"%m/%d/%Y, %H:%M:%S\")\n",
+    "# mm/dd/YY H:M:S format\n",
+    "print(\"Date & time:\", time)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Today is 5 December, 2019. Change this time string to time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
